# berries_backend

./: .gitignore  pyproject.toml
results/: account_value_20250420_230608.csv  account_value_20250421_114243.csv  actions_20250421_114243.csv  performance_metrics_20250420_230608.csv  performance_metrics_20250421_114626.csv
src/berries_backend/: __init__.py  main.py
src/berries_backend/services/: __init__.py  query_processor.py  sec_embeddings.py
src/berries_backend/utils/: memory.py
src/price_prediction/: data.py  main.py  model.py  predictor.py  trainer.py
src/rag_pipeline/: config.py  main.py
src/rag_pipeline/services/: data_retriever.py  market_data.py  response_generator.py  sec_embeddings.py
src/rag_pipeline/utils/: __init__.py
src/trading_agent/: __init__.py  config.py  main.py
src/trading_agent/data/: __init__.py  data_fetcher.py  data_processor.py
src/trading_agent/env/: __init__.py  trading_env.py
src/trading_agent/evaluation/: __init__.py  backtest.py  benchmarks.py
src/trading_agent/models/: __init__.py  ppo_agent.py
src/trading_agent/visualization/: __init__.py  plotting.py
